# cctv-sentinel

./: Cargo.toml
src/: lib.rs  main.rs
src/alerts/: mod.rs  telegram.rs
src/camera/: gridmap.rs  mod.rs
src/config/: mod.rs
src/detector/: inference.py  inference_jpeg.py  mod.rs
src/tracker/: mod.rs  trajectory.rs
src/web/: mod.rs
static/: index.html
