[package]
name = "cctv-sentinel"
version = "0.1.0"
edition = "2021"
description = "Rust-native CCTV surveillance platform"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Telegram, DVR ISAPI)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Config
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
